<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <string name="account_settings_action">AndStatus account settings</string>
  <string name="account_settings_activity_title">Account</string>
  <string name="account_settings_summary">Sync frequency, notifications, etc.</string>
  <string name="automatic">Auto</string>
  <string name="settings_action">Settings</string>
  <string name="settings_activity_title">Settings</string>
  <string name="action_menu_overflow_description">More actions&#8230;</string>
  <string name="appwidget_configure_instructions">Customize AndStatus Widget message, shown in a case there is nothing new:</string>
  <string name="appwidget_message_formats_1">{0} message</string>
  <string name="appwidget_message_formats_2">{0} messages</string>
  <string name="appwidget_mention_formats_1">{0} mention</string>
  <string name="appwidget_mention_formats_2">{0} mentions</string>
  <string name="appwidget_directmessage_formats_1">{0} direct</string>
  <string name="appwidget_directmessage_formats_2">{0} direct</string>
  <string name="appwidget_nothingnew_default">Nothing new since:</string>
  <string name="appwidget_nodata">No data yet.</string>
  <string name="authentication_never">Didn\'t authenticate yet</string>
  <string name="authentication_successful">Authentication successful!</string>
  <string name="button_add">Add</string>
  <string name="button_add_origin">Add new system</string>
  <string name="button_backup">Backup</string>
  <string name="button_cancel">Cancel</string>
  <string name="button_change_folder">Change folder</string>
  <string name="button_select_backup_file">Select backup file</string>
  <string name="button_create_message">Post</string>
  <string name="button_create_message_twitter">Tweet</string>
  <string name="button_delete">Delete</string>
  <string name="button_discard">Discard</string>
  <string name="button_hide">Clear and Hide</string>
  <string name="button_overflow">Overflow</string>
  <string name="button_restore">Restore</string>
  <string name="button_save">Save</string>
  <string name="button_skip">Skip</string>
  <string name="button_send">Send</string>
  <string name="cannot_send_empty_message">Cannot send empty message.</string>
  <string name="category_title_preference_appearance">Appearance</string>
  <string name="category_title_preference_credentials">User Credentials</string>
  <string name="category_title_preference_information">Information</string>
  <string name="category_title_preference_notifications">Notifications</string>
  <string name="category_title_preference_origin">Microblogging system</string>
  <string name="category_title_preference_settings">Settings</string>
  <string name="combined_timeline_on">combined</string>
  <string name="combined_timeline_off_account">for</string>
  <string name="combined_timeline_off_origin">at</string>
  <string name="command_follow_user">Follow</string>
  <string name="command_stop_following_user">Stop following</string>
  <string name="created_label">Created</string>
  <string name="custom_locale_title">Application language</string>
  <string name="device_default">Device default</string>
  <string name="dialog_summary_acquiring_an_access_token">Please wait while AndStatus is exchanging an OAuth Request token for Access token</string>
  <string name="dialog_summary_acquiring_a_request_token">Please wait while AndStatus is acquiring a request token for OAuth</string>
  <string name="dialog_summary_authentication_failed">Please check your username and password.</string>
  <string name="dialog_title_preference_connection_timeout">Connection timeout in seconds</string>
  <string name="dialog_title_preference_frequency">Updates are fetched every&#8230;</string>
  <string name="dialog_title_preference_history_size">History Size</string>
  <string name="dialog_title_preference_history_time">History Time</string>
  <string name="dialog_title_preference_min_log_level">Minimum logging level</string>
  <string name="dialog_title_preference_theme_color">Select a Color Theme</string>
  <string name="dialog_title_preference_theme_size">Select a Size</string>
  <string name="header_accounts">Accounts</string>
  <string name="header_add_new_account">Add new account</string>
  <string name="header_manage_existing_accounts">Manage existing accounts</string>
  <string name="label_manage_origin_systems">Manage microblogging systems</string>
  <string name="options_menu_attach">Attach</string>
  <string name="options_menu_global_search">Global search</string>
  <string name="options_menu_reload">Reload</string>
  <string name="options_menu_search">Search</string>
  <string name="preference_debugging_info_in_ui_title">Debugging information in a User Interface</string>
  <string name="preference_log_everything_to_file_title">Log everything to file</string>
  <string name="preference_log_network_level_messages_title">Log network level messages</string>
  <string name="preference_notification_icon_alternative_title">Alternative Notification icon</string>
  <string name="preference_notification_icon_alternative_off">Icon as \"&amp;s\" letters</string>
  <string name="preference_notification_icon_alternative_on">Icon as a circle</string>
  <string name="preference_true_black_title">True black background</string>
  <string name="preference_use_kitkat_media_chooser_title">Modern interface to select an attachment</string>
  <string name="summary_preference_appearance">Change the AndStatus look and feel</string>
  <string name="summary_preference_enable_android_backup_off">Android backups will not be requested</string>
  <string name="summary_preference_enable_android_backup_on">AndStatus notifies Android on data changes to be backed up (experimental)</string>
  <string name="summary_preference_frequency">Updates are fetched every {0}.</string>
  <string name="summary_preference_history_size">Message history is up to {0}.</string>
  <string name="summary_preference_history_time">Message history is up to {0}.</string>
  <string name="summary_preference_theme_color">Color and style</string>
  <string name="summary_preference_min_log_level">The level is {0}.</string>
  <string name="summary_preference_notifications">Change notification options</string>
  <string name="summary_preference_notifications_enabled_off">Notifications are disabled</string>
  <string name="summary_preference_notifications_enabled_on">Notifications are enabled</string>
  <string name="summary_preference_notifications_messages_off">No notification for DMs</string>
  <string name="summary_preference_notifications_messages_on">You will be notified of new DMs</string>
  <string name="summary_preference_notifications_mentions_off">No notification for Mentions</string>
  <string name="summary_preference_notifications_mentions_on">You will be notified of new Mentions</string>
  <string name="summary_preference_notifications_queue_off">No notification of commands in the queue</string>
  <string name="summary_preference_notifications_queue_on">You will be notified of commands in the queue to be sent</string>
  <string name="summary_preference_notifications_timeline_off">No notification for Home</string>
  <string name="summary_preference_notifications_timeline_on">You will be notified of new Home messages</string>
  <string name="summary_preference_show_avatars_off">No User avatars will be displayed</string>
  <string name="summary_preference_show_avatars_on">User avatars will be displayed</string>
  <string name="summary_preference_storage">Where and what information to store</string>
  <string name="summary_preference_storage_external_off">Data is stored in Internal Memory</string>
  <string name="summary_preference_storage_external_on">Data is stored in External Memory</string>
  <string name="summary_preference_sync_indicator_on_timeline_off">No sync indicator</string>
  <string name="summary_preference_sync_indicator_on_timeline_on">You will see timeline sync progress in a separate bar above timeline</string>
  <string name="summary_preference_sync_while_using_application_off">No background sync while browsing timeline and conversations in order to preserve smoothness of scrolling</string>
  <string name="summary_preference_sync_while_using_application_on">Background sync is always on. Timeline may freeze sometimes.</string>
  <string name="summary_preference_syncing">When to sync timeline and how to indicate this</string>
  <string name="summary_preference_theme_size">Select text size</string>
  <string name="summary_preference_user_in_timeline">User will be shown as \"{0}\"</string>
  <string name="summary_preference_vibration_off">Vibration is turned off</string>
  <string name="summary_preference_vibration_on">Vibrate on incoming message</string>
  <string name="timeline_title_home">Home</string>
  <string name="title_preference_about_application">About AndStatus</string>
  <string name="title_preference_appearance">Appearance</string>
  <string name="title_preference_change_log">Change Log</string>
  <string name="title_preference_connection_timeout">Connection timeout</string>
  <string name="title_preference_contact_developer">Contact Developer</string>
  <string name="title_preference_debugging">Logging and debugging</string>
  <string name="title_preference_download_attachments_over_wifi_only">Download attachments over Wi-Fi only</string>
  <string name="title_preference_enable_android_backup">Enable automatic Android backup</string>
  <string name="title_preference_enter_sends_message">ENTER key sends message</string>
  <string name="title_preference_frequency">Sync frequency</string>
  <string name="title_preference_history_size">History Size</string>
  <string name="title_preference_history_time">History Time</string>
  <string name="title_preference_min_log_level">Minimum logging level</string>
  <string name="title_preference_notification_sound">Notification Ringtone</string>
  <string name="title_preference_notifications">Notifications</string>
  <string name="title_preference_notifications_enabled">Enable Notifications</string>
  <string name="title_preference_notifications_messages">New Direct Messages</string>
  <string name="title_preference_notifications_mentions">New Mentions</string>
  <string name="title_preference_notifications_queue">Commands in a queue</string>
  <string name="title_preference_notifications_timeline">New Home messages</string>
  <string name="title_preference_old_messages_first_in_conversation">Old messages first in a Conversation view</string>
  <string name="title_preference_mark_replies_in_timeline">Mark replies to me in a Timeline</string>
  <string name="title_preference_report_bug">Report a bug</string>
  <string name="title_preference_storage">Storage</string>
  <string name="title_preference_storage_external">External Storage</string>
  <string name="title_preference_sync_after_message_was_sent">Sync after message was sent</string>
  <string name="title_preference_sync_indicator_on_timeline">Syncing indicator in a Timeline</string>
  <string name="title_preference_sync_while_using_application">Sync while using AndStatus</string>
  <string name="title_preference_syncing">Syncing</string>
  <string name="title_preference_theme_color">Color Theme</string>
  <string name="title_preference_theme_size">Size</string>
  <string name="title_preference_username">Username</string>
  <string name="title_preference_show_avatars">Display Avatars</string>
  <string name="title_preference_show_attached_images">Display attached images</string>
  <string name="title_preference_show_origin">Display Microblogging system in a Timeline</string>
  <string name="title_preference_user_in_timeline">How to show a User in a Timeline</string>
  <string name="title_preference_vibration">Vibration</string>
  <string name="title_sending_messages_log_enabled">Log Sending messages to a file</string>
</resources>